--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.6.1",
     "@types/node": "^18.11.9",
     "fastify": "^4.10.2"
