--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,9 @@
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
-    "lib": ["esnext"],
+    "target": "es2019",
+    "module": "commonjs",
+    "lib": ["esnext", "esnext.asynciterable"],
     "esModuleInterop": true
   }
 }
