--- a/web/package.json
+++ b/web/package.json
@@ -9,19 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
     "axios": "^1.2.0",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6",
-    "typescript": "4.9.3"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "typescript": "4.9.3",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.4",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "@types/styled-components": "^5.1.26"
   }
 }
