--- a/web/package.json
+++ b/web/package.json
@@ -16,12 +16,12 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "typescript": "4.9.3",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.4",
+    "typescript": "4.9.3"
   }
 }
