--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.6.1",
-    "fastify": "^4.10.2"
+    "fastify": "^4.10.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "prisma": "^4.6.1",
     "ts-node-dev": "^2.0.0",
